# BuddyBotM5

./: DEPLOYMENT_GUIDE.md  README.md  VERIFICATION_CHECKLIST.md  deploy_web.py  generate_assets.py  generate_media.py  generate_sounds.py  generate_sprites.py  package_builds.py
.github/workflows/: rolling-release.yml
docs/: REFACTORING_PLAN_v3.md
firmware/cam/: platformio.ini
firmware/cam/src/: VoiceAssistant.cpp  VoiceAssistant.h  main.cpp
firmware/cardputer/: platformio.ini
firmware/cardputer/.pio/libdeps/m5stack-sticks3/M5PM1/: CMakeLists.txt  README.md  library.json  library.properties
firmware/cardputer/data/: ai.js  app.js  bundle.js  hardware.js  index.html  play.js  style.css
firmware/cardputer/include/: web_assets.h
firmware/cardputer/src/: main.cpp
firmware/cardputer_adv/: platformio.ini
firmware/cardputer_adv/data/: index.html  settings.js
firmware/core/: platformio.ini
firmware/core/data/: ai.js  app.js  (+7 more)
firmware/sticks3/: platformio.ini
scripts/: clean_main.py  extract_api_motor.py  fix_api_motor.py  fix_index.py  fix_ota.py  fix_wifi.py  generate_qrs.py  patch_imu.py  sync_web.py  update_config.py  update_config_rot.py  update_core_main.py  update_index.py  update_index_js.py  update_ir.py  update_main_rot.py  update_motor_cpp.py  update_motor_h.py  update_persona_imu.py  update_pio.py  update_pwm.py  update_settings.py  update_web_rot.py  update_wonder.py
server/: brain.py  config.env  requirements.txt
web/: ai.js  app.js  bundle.js  chatbot.js  drive.js  gamification.js  hardware.js  index.html  play.js  settings.js  style.css
(+120 files in other folders)
